Restyle subscribe button. Fix font anti-aliasing on Safari

--- a/app/styles/_typography.scss
+++ b/app/styles/_typography.scss
@@ -3,9 +3,13 @@
 body {
   font-family:$font-family-main;
   font-size:0; /* Anything other than 0 appears to add excess margin/padding to elements */
+  color:$grey-dark;
+}
+
+* {
+  /* Must be assign at element-level for Safari, otherwise it uses its own smoothing settings */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color:$grey-dark;
 }
 
 h1, .h1,
